Refactor simulation to replace SimulationBody with stateless Body